# handlers/operation_log.go
@@ -20,12 +20,12 @@ func NewOperationLogHandler(deps *HandlerDependencies) *OperationLogHandler {
 	}
 }
 
-// Find all gateway logs info
-// @Summary Find All GatewayLog
+// Find all operation logs info
+// @Summary Find All OperationLog
 // @Schemes
-// @Description find all gateway logs info
+// @Description find all operation logs info
 // @Produce json
-// @Success 200 {array} []models.GatewayLog
+// @Success 200 {array} []models.OperationLog
 // @Failure 400 {object} utils.ErrorResponse
 // @Router /v1/operation_logs [get]
 func (h *OperationLogHandler) FindAllOperationLog(c *gin.Context) {
@@ -41,15 +41,15 @@ func (h *OperationLogHandler) FindAllOperationLog(c *gin.Context) {
 	utils.ResponseJson(c, http.StatusOK, glList)
 }
 
-// Find gateway log info by id
-// @Summary Find GatewayLog By ID
+// Find operation log info by gateway_id
+// @Summary Find Operation By GatewayID
 // @Schemes
-// @Description find gateway log info by id
+// @Description find operation log info by gateway_id
 // @Produce json
 // @Param        id	path	string	true	"GatewayLog ID"
-// @Success 200 {object} models.GatewayLog
+// @Success 200 {object} models.OperationLog
 // @Failure 400 {object} utils.ErrorResponse
-// @Router /v1/operation_logs/{id} [get]
+// @Router /v1/operation_logs/gateway_id/{gateway_id} [get]
 func (h *OperationLogHandler) FindOperationLogByGatewayID(c *gin.Context) {
 	id := c.Param("gateway_id")
 	gl, err := h.deps.SvcOpts.OperationLogSvc.GetOperationLogByGatewayID(c, id)
@@ -64,17 +64,40 @@ func (h *OperationLogHandler) FindOperationLogByGatewayID(c *gin.Context) {
 	utils.ResponseJson(c, http.StatusOK, gl)
 }
 
-// Find Gateway logs by period of time
-// @Summary Find Gateway logs by period of time
+// Find operation log info by id
+// @Summary Find Operation By ID
 // @Schemes
-// @Description find Gateway logs by period of time
+// @Description find operation log info by id
 // @Produce json
-// @Param        id	path	string	true	"GatewayLog ID"
+// @Param        id	path	string	true	"ID"
+// @Success 200 {object} models.OperationLog
+// @Failure 400 {object} utils.ErrorResponse
+// @Router /v1/operation_logs/{id} [get]
+func (h *OperationLogHandler) FindAllOperationLogByID(c *gin.Context) {
+	id := c.Param("id")
+	ol, err := h.deps.SvcOpts.OperationLogSvc.GetOperationLogByID(c, id)
+	if err != nil {
+		utils.ResponseJson(c, http.StatusBadRequest, &utils.ErrorResponse{
+			StatusCode: http.StatusBadRequest,
+			Msg:        "Get gateway log failed",
+			ErrorMsg:   err.Error(),
+		})
+		return
+	}
+	utils.ResponseJson(c, http.StatusOK, ol)
+}
+
+// Find operation logs by period of time
+// @Summary Find operation logs by period of time
+// @Schemes
+// @Description find operation logs by period of time
+// @Produce json
+// @Param        id	path	string	true	"Gateway ID"
 // @Param 		 from path  string  true    "From Unix time"
 // @Param 		 to path    string  true    "To Unix time"
-// @Success 200 {object} []models.GatewayLog
+// @Success 200 {object} []models.OperationLog
 // @Failure 400 {object} utils.ErrorResponse
-// @Router /v1/operation_logs/gateway_id/:gateway_id/period/:from/:to [get]
+// @Router /v1/operation_logs/gateway_id/{gateway_id}/period/{from}/{to} [get]
 func (h *OperationLogHandler) FindOperationLogsByGatewayIDAndTime(c *gin.Context) {
 	gatewayId := c.Param("gateway_id")
 	from := c.Param("from")
@@ -95,17 +118,17 @@ func (h *OperationLogHandler) FindOperationLogsByGatewayIDAndTime(c *gin.Context
 	utils.ResponseJson(c, http.StatusOK, glList)
 }
 
-// Find Gateway logs by period of time
-// @Summary Find Gateway logs by period of time
+// Find Operation logs by period of time
+// @Summary Find Operation logs by period of time
 // @Schemes
-// @Description find Gateway logs by period of time
+// @Description find Operation logs by period of time
 // @Produce json
-// @Param        id	path	string	true	"GatewayLog ID"
+// @Param        id	path	string	true	"Gateway ID"
 // @Param 		 from path  string  true    "From Unix time"
 // @Param 		 to path    string  true    "To Unix time"
-// @Success 200 {object} []models.GatewayLog
+// @Success 200 {object} []models.OperationLog
 // @Failure 400 {object} utils.ErrorResponse
-// @Router /v1/operation_logs/period/:from/:to [get]
+// @Router /v1/operation_logs/period/{from}/{to} [get]
 func (h *OperationLogHandler) FindOperationLogsByTime(c *gin.Context) {
 	from := c.Param("from")
 	to := c.Param("to")
